@@ -23,6 +23,7 @@
 <li>[Feature] Display distinguished icon per protocol for bookmarks
 <li>[Feature] Set quarantine attribute on downloaded files</li>
 <li>[Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [<a href="http://trac.cyberduck.ch/ticket/2823">#2823</a>]</li>
+<li>[Feature] Download folder in Dock bounces once when download finishes (10.5)</li>
 <li>[Bugfix] Uploads fail with digest access authentication [<a href="http://trac.cyberduck.ch/ticket/2268">#2268</a>]</li>
 <li>[Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [<a href="http://trac.cyberduck.ch/ticket/2571">#2571</a>]</li>
         </ul>
