@@ -14,6 +14,7 @@ Changelog. Last modified: $Date$
 - [Feature] Display distinguished icon per protocol for bookmarks
 - [Feature] Set quarantine attribute on downloaded files
 - [Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [#2823]
+- [Feature] Download folder in Dock bounces once when download finishes (10.5)
 - [Bugfix] Uploads fail with digest access authentication [#2268]
 - [Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [#2571]
 
